hphp/test/slow/finally/new_try_catch_008.php.expectf
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16

Fatal error: Uncaught exception 'B' with message '17' in %s/test/slow/finally/new_try_catch_008.php:47
Stack trace:
#0 %s/test/slow/finally/new_try_catch_008.php(64): blah()
#1 {main}
